--- a/app/views/themed/default/webroot/css/style.css
+++ b/app/views/themed/default/webroot/css/style.css
@@ -533,3 +533,10 @@ div.code-coverage-results span.result-ok {
 div.code-coverage-results span.result-good {
 	color: #0a0;
 }
+.item img {
+    float: left;
+}
+.item table {
+    overflow: hidden;
+    position: relative;
+}
